헤더 active추가 메인이미지 효과추가 프로젝트이미지변경

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@ a {
   text-decoration: none;
 }
 body {
-  background: linear-gradient(125deg, #fbd7e5, #bdf4fa);
+  background: linear-gradient(125deg, #fbd7e5ee, #bdf4fa);
 }
